fixed a spacing issue on action buttons

--- a/css/main.css
+++ b/css/main.css
@@ -235,6 +235,11 @@ header {overflow: hidden;}
 
 
 /*Media Queries*/
+@media (max-width: 1240px){
+	.btns h4{
+		font-size: 20px;
+	}
+}
 @media (max-width: 1024px){
 	div.hero{
 		height: 400px;
